project products + create project with product integration + get projects integration

--- a/angular-app/client/src/app/project-list/project-list.component.scss
+++ b/angular-app/client/src/app/project-list/project-list.component.scss
@@ -52,6 +52,7 @@
     transition-duration: 0.4s;
     cursor: pointer;
     border-radius: 8px;
+    margin-right: 10px;
   }
   
   .add-button:hover {
