--- a/angular-app/client/src/app/product-card/product-card.component.html
+++ b/angular-app/client/src/app/product-card/product-card.component.html
@@ -1,12 +1,19 @@
 <div class="card-container">
-    <mat-card class="example-card">
+    <mat-card class="example-card" *ngFor="let product of products">
       <mat-card-header>
-        <mat-card-title>Product X</mat-card-title>
-        <mat-card-subtitle>Catégorie du produit</mat-card-subtitle>
+        <mat-card-title>{{ product.name }}</mat-card-title>
+        <mat-card-subtitle>Product ID: {{ product.id }}</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
-        <p>This card indeterminates progress bar.</p>
-        <p>{{longText}}</p>
+        <ul>
+          <li><strong>ID:</strong> {{ product.id }}</li>
+          <li><strong>Nom:</strong> {{ product.name }}</li>
+          <li><strong>Quantité:</strong> {{ product.quantite }}</li>
+          <li><strong>Prix de vente unitaire:</strong> {{ product.prixVenteUnitaire  }} €</li>
+          <li><strong>Coût variable unitaire:</strong> {{ product.coutVariableUnitaire  }} €</li>
+          <li><strong>Nombre vente estimée par semaine:</strong> {{ product.nombreVenteEstimeParSemaine }}</li>
+          <li><strong>Coûts fixes directs:</strong> {{ product.coutsFixesDirects  }} €</li>
+        </ul>
       </mat-card-content>
       <br>
       <mat-card-actions>
@@ -14,37 +21,6 @@
         <button mat-button>Modifier</button>
       </mat-card-actions>
       
-    </mat-card>
-  
-    <mat-card class="example-card">
-        <mat-card-header>
-          <mat-card-title>Product X</mat-card-title>
-          <mat-card-subtitle>Catégorie du produit</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-          <p>This card indeterminates progress bar.</p>
-          <p>{{longText}}</p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>Consulter</button>
-          <button mat-button>Modifier</button>
-        </mat-card-actions>
-      </mat-card>
-
-      <mat-card class="example-card">
-        <mat-card-header>
-          <mat-card-title>Product X</mat-card-title>
-          <mat-card-subtitle>Catégorie du produit</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-          <p>This card indeterminates progress bar.</p>
-          <p>{{longText}}</p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>Consulter</button>
-          <button mat-button>Modifier</button>
-        </mat-card-actions>
-      </mat-card>
-     
+    </mat-card>   
   </div>
   
