--- a/angular-app/client/src/app/project-list/project-list.component.html
+++ b/angular-app/client/src/app/project-list/project-list.component.html
@@ -12,7 +12,7 @@
         <!-- Charges Fixes Communes -->
         <ng-container matColumnDef="chargesFixesCommunes">
         <th mat-header-cell *matHeaderCellDef>Charges Fixes Communes</th>
-        <td mat-cell *matCellDef="let project">{{project.coutsFixesCommunes }}</td>
+        <td mat-cell *matCellDef="let project">{{project.chargesFixesCommunes }}</td>
         </ng-container>
     
         <!-- Chiffre d'Affaire Total -->
