manque le CA seulement

--- a/angular-app/client/src/app/project-list/project-list.component.html
+++ b/angular-app/client/src/app/project-list/project-list.component.html
@@ -6,7 +6,7 @@
         <!-- Nom du projet -->
         <ng-container matColumnDef="nom">
         <th mat-header-cell *matHeaderCellDef>Nom du Projet</th>
-        <td mat-cell *matCellDef="let project">{{project.nom}}</td>
+        <td mat-cell *matCellDef="let project" (click)="redirectToProjectDetails(project)">{{project.nom}}</td>
         </ng-container>
     
         <!-- Charges Fixes Communes -->
